--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <modules>
         <module>common</module>
         <module>unit1</module>
+        <module>unit2</module>
     </modules>
     <dependencies>
         <dependency>
