--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,11 @@
             <version>4.12</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>ognl</groupId>
             <artifactId>ognl</artifactId>
