--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>common</module>
         <module>unit1</module>
         <module>unit2</module>
+        <module>unit3</module>
     </modules>
     <dependencies>
         <dependency>
