--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>unit1</module>
         <module>unit2</module>
         <module>unit3</module>
+        <module>unit4</module>
     </modules>
     <dependencies>
         <dependency>
